--- a/.github/workflows/Generate Snak.yml
+++ b/.github/workflows/Generate Snak.yml
@@ -20,11 +20,14 @@ jobs:
         id: snake-gif
         with:
           github_user_name: ${{ github.repository_owner }}
-          gif_out_path: ./assets/github-contribution-grid-snake.gif
-          svg_out_path: ./assets/github-contribution-grid-snake.svg
+          outputs: |
+            ./assets/github-contribution-grid-snake.svg
+            ./assets/github-contribution-grid-snake-dark.svg?palette=github-dark
 
       - name: Push to GitHub
         uses: EndBug/add-and-commit@v7.2.1
         with:
           branch: main
+          author_name: ilikui
+          author_email: 2563043733@qq.com
           message: 'Generate Contribution Snake'
