--- a/.github/workflows/Generate Snak.yml
+++ b/.github/workflows/Generate Snak.yml
@@ -3,31 +3,64 @@
 name: Generate Snake
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+  workflow_dispatch: # execute manually
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
 
+  summary-cards:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
-      
-      - name: Generate Snake
-        uses: Platane/snk/svg-only@v2
+      - uses: actions/checkout@v2
+
+      - name: Summary Cards
+        uses: vn7n24fzkq/github-profile-summary-cards@main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          USERNAME: ${{ github.repository_owner }}
+          
+  snake-animation:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate Snake Animation
+        uses: Platane/snk@main
         id: snake-gif
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             ./assets/github-contribution-grid-snake.svg
             ./assets/github-contribution-grid-snake-dark.svg?palette=github-dark
-
-      - name: Push to GitHub
-        uses: EndBug/add-and-commit@v7.2.1
+        env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish Snake Animation SVG
+        uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          branch: main
-          author_name: ilikui
-          author_email: 2563043733@qq.com
-          message: 'Generate Contribution Snake'
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  metrics-achievements:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Achievements metrics
+        uses: lowlighter/metrics@master
+        with:
+          filename: metrics.plugin.achievements.svg
+          token: ${{ secrets.ACCESS_TOKEN }}
+          base: ""
+          plugin_achievements: yes
+          plugin_achievements_threshold: B       # Display achievements with rank B or higher
+          plugin_achievements_secrets: yes       # Display unlocked secrets achievements
+          plugin_achievements_ignored: octonaut  # Hide octonaut achievement
+          plugin_achievements_limit: 0           # Display all unlocked achievement matching threshold and secrets params
+
+  metrics-github:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Github metrics
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.ACCESS_TOKEN }}
