--- a/.github/workflows/Generate Snak.yml
+++ b/.github/workflows/Generate Snak.yml
@@ -9,17 +9,17 @@ on:
 
 jobs:
 
-  summary-cards:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+#  summary-cards:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
 
-      - name: Summary Cards
-        uses: vn7n24fzkq/github-profile-summary-cards@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          USERNAME: ${{ github.repository_owner }}
+#      - name: Summary Cards
+#        uses: vn7n24fzkq/github-profile-summary-cards@main
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          USERNAME: ${{ github.repository_owner }}
           
   snake-animation:
     runs-on: ubuntu-latest
